--- a/weather/src/app/app.component.html
+++ b/weather/src/app/app.component.html
@@ -1,5 +1,7 @@
-<menu>
-  <li><a >City</a></li>
+<menu class="main-menu">
+  <li><a [routerLink]="['city']" routerLinkActive="current">City</a></li>
+  <li><a  [routerLink]="['users']" routerLinkActive="current">Users</a></li>
 </menu>
+<div *ngIf="isLoaderShow" class="loader"></div>
 <router-outlet> </router-outlet>  
 
